src/test/ui/regions/regions-bounded-by-trait-requiring-static.base.stderr
error[E0477]: the type `&'a isize` does not fulfill the required lifetime
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:26:5
   |
LL |     assert_send::<&'a isize>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:10:18
   |
LL | fn assert_send<T:'static>() { }
   |                  ^^^^^^^

error[E0477]: the type `&'a str` does not fulfill the required lifetime
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:32:5
   |
LL |     assert_send::<&'a str>();
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:10:18
   |
LL | fn assert_send<T:'static>() { }
   |                  ^^^^^^^

error[E0477]: the type `&'a [isize]` does not fulfill the required lifetime
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:38:5
   |
LL |     assert_send::<&'a [isize]>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:10:18
   |
LL | fn assert_send<T:'static>() { }
   |                  ^^^^^^^

error[E0477]: the type `Box<&'a isize>` does not fulfill the required lifetime
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:54:5
   |
LL |     assert_send::<Box<&'a isize>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:10:18
   |
LL | fn assert_send<T:'static>() { }
   |                  ^^^^^^^

error[E0477]: the type `*const &'a isize` does not fulfill the required lifetime
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:67:5
   |
LL |     assert_send::<*const &'a isize>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:10:18
   |
LL | fn assert_send<T:'static>() { }
   |                  ^^^^^^^

error[E0477]: the type `*mut &'a isize` does not fulfill the required lifetime
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:73:5
   |
LL |     assert_send::<*mut &'a isize>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/regions-bounded-by-trait-requiring-static.rs:10:18
   |
LL | fn assert_send<T:'static>() { }
   |                  ^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0477`.
